[package]
name = "tx_launch"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = {version = "1.0.228",features = ["derive"]}
serde_json = "1.0.145"

[profile.dev]
panic = "abort"

[profile.release]
lto = true       
codegen-units = 1      
panic = "abort"       
strip = "debuginfo"  
